fix(task-list): Amend spacing for numbers on IE11

--- a/src/sass/modules/task-list.scss
+++ b/src/sass/modules/task-list.scss
@@ -32,6 +32,12 @@ ol.task-item-list {
 	li {
 		margin: 0 0 2.5rem;
 
+		@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+			@media #{$mobile} {
+				margin-left: -22px; // IE11 hacks
+			}
+		}
+
 		@media #{$tablet, $desktop} {
 			margin-left: 26px;
 		}
@@ -55,7 +61,7 @@ ol.task-item-list {
 
 	@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 		@media #{$mobile} {
-			margin-left: -16px;
+			margin-left: -22px; // IE11 hacks
 		}
 	}
 
